# MergenVision

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_REFERENCE_CHECK.md  REFERENCE_CHECK.md  UI_REFERENCE_CHECK.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: audit.py  health.py  (+6 more)
backend/app/application/: audit_service.py  enrollment_pipeline.py  enrollment_service.py  identification_service.py  online_identify_pipeline.py  people_service.py  photo_service.py  readiness_service.py  stats_service.py
backend/app/core/: config.py  errors.py  ids.py  logging.py  security.py
backend/app/domain/: models.py
backend/app/infrastructure/: db.py  health_checks.py  minio_client.py  model_registry.py  qdrant_client.py  runtime_state.py  storage.py  vector_store.py
backend/app/repositories/: audit_repo.py  face_identity_repo.py  face_sample_repo.py  identification_repo.py  person_repo.py  photo_repo.py
backend/app/schemas/: __init__.py  audit.py  common.py  health.py  identify.py  people.py  photos.py  stats.py
backend/scripts/: benchmark_enrollment.py  build_trt_engines.py  bulk_enroll_celeba.py  bulk_enroll_identity_folders.py  decode_casia_webface_rec.py  kaggle_download.py  load_dataset_async.py  load_lfw_to_system.py  profile_pipeline.py
backend/scripts/datasets/: README.md
backend/tests/: conftest.py
backend/tests/api/: test_health_ready.py  test_openapi_scope.py
backend/tests/scripts/: test_build_trt_engines.py
backend/tests/unit/: test_config.py  test_enrollment_service.py  test_identification_service.py  test_ids.py  test_people_service.py  test_photo_service.py  test_stats_service.py
(+186 files in other folders)
