[project]
name = "mergenvision-backend"
version = "0.1.0"
description = "MergenVision Phase 1 photo-based person recognition backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.130",
    "uvicorn[standard]>=0.30,<0.35",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.31",
    "aiosqlite>=0.20,<0.25",
    "httpx>=0.27,<0.29",
    "minio>=7.2,<7.3",
    "pillow>=10,<11",
    "python-multipart>=0.0.9,<0.1",
    "qdrant-client>=1.14,<2",
    "numpy>=2,<2.3",
    "alembic>=1.13,<1.15",
    # GPU stack — lazy imported in production code; tests use mocks.
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
    "tensorrt>=10.0,<11",
    "cupy-cuda12x>=13.0,<14",
    "nvidia-dali-cuda120>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.5,<0.8",
    "mypy>=1.11,<1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N812"]

[tool.ruff.lint.per-file-ignores]
"app/schemas/*.py" = ["N815"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
